tests/activitygen/errors/passanger_disallowed/errors.activitygen
Error: No street that allows passerger vehicles found in this city
Quitting (on error).
